Section 4 has been done

--- a/index.html
+++ b/index.html
@@ -173,6 +173,151 @@
             </div>
         </section>
         <!-- Section 3 End -->
+        <!-- Section 4 Start -->
+        <section>
+            <hr class="my-12 border-2 border-dashed border-[#13131833]">
+            <div class="text-center gap-6 flex flex-col">
+                <h1 class="font-extrabold text-4xl">Our New Products</h1>
+                <p class="text-[#0d0d128a] font-medium text-base">Discover the cutting-edge features and exceptional quality of our newest products. Feel free to customize this template based on the nature of your products and the specific details you'd like to highlight.</p>
+            </div>
+            <hr class="my-12 border-2 border-dashed border-[#13131833]">
+            <!-- Section 4 Grid -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                <div class="flex gap-6 items-center p-6 border-solid border-2 border-slate-200 rounded-2xl">
+                    <div>
+                        <img src="images/5.png" alt="">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex gap-3">
+                            <i class="fa-solid fa-star text-[#F99808]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">5.0</h6>
+                            <i class="fa-solid fa-eye"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">20</h6>
+                            <i class="fa-regular fa-heart"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">200</h6>
+                        </div>
+                        <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Football</h3>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <div class="flex gap-3">
+                            <h5 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h5>
+                            <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">Delivery Fee : Free</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex gap-6 items-center p-6 border-solid border-2 border-slate-200 rounded-2xl">
+                    <div>
+                        <img src="images/6.png" alt="">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex gap-3">
+                            <i class="fa-solid fa-star text-[#F99808]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">4.8</h6>
+                            <i class="fa-solid fa-eye"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">25</h6>
+                            <i class="fa-regular fa-heart"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">220</h6>
+                        </div>
+                        <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Hockey</h3>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <div class="flex gap-3">
+                            <h5 class="text-[#FF4240] text-base font-extrabold">Price - $12.00</h5>
+                            <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">Delivery Fee : Free</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex gap-6 items-center p-6 border-solid border-2 border-slate-200 rounded-2xl">
+                    <div>
+                        <img src="images/7.png" alt="">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex gap-3">
+                            <i class="fa-solid fa-star text-[#F99808]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">4.6</h6>
+                            <i class="fa-solid fa-eye"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">56</h6>
+                            <i class="fa-regular fa-heart"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">300</h6>
+                        </div>
+                        <h3 class="text-[#131318] text-xl font-extrabold">Cap For Hockeys</h3>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <div class="flex gap-3">
+                            <h5 class="text-[#FF4240] text-base font-extrabold">Price - $25.00</h5>
+                            <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">Delivery Fee : Free</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex gap-6 items-center p-6 border-solid border-2 border-slate-200 rounded-2xl">
+                    <div>
+                        <img src="images/8.png" alt="">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex gap-3">
+                            <i class="fa-solid fa-star text-[#F99808]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">4.1</h6>
+                            <i class="fa-solid fa-eye"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">10</h6>
+                            <i class="fa-regular fa-heart"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">150</h6>
+                        </div>
+                        <h3 class="text-[#131318] text-xl font-extrabold">World Hockey Leagues</h3>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <div class="flex gap-3">
+                            <h5 class="text-[#FF4240] text-base font-extrabold">Price - $120.00</h5>
+                            <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">Delivery Fee : Free</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex gap-6 items-center p-6 border-solid border-2 border-slate-200 rounded-2xl">
+                    <div>
+                        <img src="images/9.png" alt="">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex gap-3">
+                            <i class="fa-solid fa-star text-[#F99808]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">3.9</h6>
+                            <i class="fa-solid fa-eye"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">205</h6>
+                            <i class="fa-regular fa-heart"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">180</h6>
+                        </div>
+                        <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Football</h3>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <div class="flex gap-3">
+                            <h5 class="text-[#FF4240] text-base font-extrabold">Price - $29.00</h5>
+                            <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">Delivery Fee : Free</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex gap-6 items-center p-6 border-solid border-2 border-slate-200 rounded-2xl">
+                    <div>
+                        <img src="images/10.png" alt="">
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex gap-3">
+                            <i class="fa-solid fa-star text-[#F99808]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">4.4</h6>
+                            <i class="fa-solid fa-eye"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">75</h6>
+                            <i class="fa-regular fa-heart"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">350</h6>
+                        </div>
+                        <h3 class="text-[#131318] text-xl font-extrabold">Hockey World Cup</h3>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <div class="flex gap-3">
+                            <h5 class="text-[#FF4240] text-base font-extrabold">Price - $45.00</h5>
+                            <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
+                            <h6 class="text-base font-medium text-[#13131880]">Delivery Fee : Free</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Section 4 End -->
     </main>
     <!-- Footer Section -->
     <footer>
