--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <hr class="my-8 border-2 border-dashed border-[#13131833]">
             <div class="grid lg:grid-cols-2 gap-6">
                 <div
-                    class="bg-[linear-gradient(to_right_bottom,rgba(9,7,12,0.45),rgba(7,4,10,0.5)),url('../images/2.png')] bg-no-repeat bg-cover object-cover rounded-2xl p-10 flex flex-col gap-5">
+                    class="bg-[linear-gradient(to_right_bottom,rgba(9,7,12,0.45),rgba(7,4,10,0.5)),url('images/2.png')] bg-no-repeat bg-cover object-cover rounded-2xl p-10 flex flex-col gap-5">
                     <h3 class="text-3xl font-extrabold text-white">Junior Program</h3>
                     <p class="text-sm font-medium text-white">Specialized initiative focused on the development of
                         young athletes. These initiatives play a vital role in fostering a continuous learning culture,
@@ -150,7 +150,7 @@
                     <button class="btn bg-[#FF4240] text-white w-44">Register Now!</button>
                 </div>
                 <div
-                    class="bg-[linear-gradient(to_right_bottom,rgba(9,7,12,0.45),rgba(7,4,10,0.5)),url('../images/3.png')] bg-no-repeat bg-cover object-cover rounded-2xl p-10 flex flex-col gap-5">
+                    class="bg-[linear-gradient(to_right_bottom,rgba(9,7,12,0.45),rgba(7,4,10,0.5)),url('images/3.png')] bg-no-repeat bg-cover object-cover rounded-2xl p-10 flex flex-col gap-5">
                     <h3 class="text-3xl font-extrabold text-white">Teenager Program</h3>
                     <p class="text-sm font-medium text-white">Specialized set of activities designed to cater to the
                         interests of teenagers. These initiatives play a vital role in fostering a continuous learning
@@ -159,7 +159,7 @@
                     <button class="btn bg-[#FF4240] text-white w-44">Register Now!</button>
                 </div>
                 <div
-                    class="bg-[linear-gradient(to_right_bottom,rgba(9,7,12,0.45),rgba(7,4,10,0.5)),url('../images/4.png')] bg-no-repeat bg-cover object-cover rounded-2xl flex flex-col gap-5 lg:col-span-2">
+                    class="bg-[linear-gradient(to_right_bottom,rgba(9,7,12,0.45),rgba(7,4,10,0.5)),url('images/4.png')] bg-no-repeat bg-cover object-cover rounded-2xl flex flex-col gap-5 lg:col-span-2">
                     <div class="p-10 lg:py-10 flex flex-col gap-5 lg:mt-40">
                         <h3 class="text-3xl font-extrabold text-white">Professional Program</h3>
                         <p class="text-sm font-medium text-white w-2/5">Initiatives designed to enhance the skills,
