All main section has been done. only bonus section left

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                        'section': "url('../images/2.png')",
                     }
                 }
             }
@@ -106,24 +105,28 @@
             <!-- Circular Progress -->
             <div class="grid gap-10 grid-cols-1 lg:grid-cols-4 justify-between items-center p-12">
                 <div class="flex flex-col gap-2 justify-center items-center">
-                    <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span class="text-[#131318] font-extrabold text-2xl">87%</span></div>
+                    <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span
+                            class="text-[#131318] font-extrabold text-2xl">87%</span></div>
                     <h1 class="text-2xl font-semibold text-[#131318] text-center">Prayer Facility</h1>
                     <p class="font-normal text-base text-[#13131899] text-center">We have dedicated room for prayer.</p>
                 </div>
                 <div class="flex flex-col gap-2 justify-center items-center">
-                    <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"><span class="text-[#131318] font-extrabold text-2xl">95%</span></div>
+                    <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"><span
+                            class="text-[#131318] font-extrabold text-2xl">95%</span></div>
                     <h1 class="text-2xl font-semibold text-[#131318] text-center">Experienced Coach</h1>
                     <p class="font-normal text-base text-[#13131899] text-center">Experienced coach possesses skills to
                         provide guidance.</p>
                 </div>
                 <div class="flex flex-col gap-2 justify-center items-center">
-                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"><span class="text-[#131318] font-extrabold text-2xl">90%</span></div>
+                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"><span
+                            class="text-[#131318] font-extrabold text-2xl">90%</span></div>
                     <h1 class="text-2xl font-semibold text-[#131318] text-center">Senior Player</h1>
                     <p class="font-normal text-base text-[#13131899] text-center">Senior players bring skill and
                         experience to the team.</p>
                 </div>
                 <div class="flex flex-col gap-2 justify-center items-center">
-                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"><span class="text-[#131318] font-extrabold text-2xl">80%</span></div>
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"><span
+                            class="text-[#131318] font-extrabold text-2xl">80%</span></div>
                     <h1 class="text-2xl font-semibold text-[#131318] text-center">Training Ground</h1>
                     <p class="font-normal text-base text-[#13131899] text-center">Our training ground is a dedicated
                         facility for practice.</p>
@@ -146,7 +149,7 @@
                     <h3 class="text-3xl font-extrabold text-white">Junior Program</h3>
                     <p class="text-sm font-medium text-white">Specialized initiative focused on the development of
                         young athletes. These initiatives play a vital role in fostering a continuous learning culture,
-                        empowering individuals to adapt to evolving challenges and excel in their respective fields.</p>
+                        empowering individuals to adapt to evolving challenges in their respective fields.</p>
                     <button class="btn bg-[#FF4240] text-white w-44">Register Now!</button>
                 </div>
                 <div
@@ -154,7 +157,7 @@
                     <h3 class="text-3xl font-extrabold text-white">Teenager Program</h3>
                     <p class="text-sm font-medium text-white">Specialized set of activities designed to cater to the
                         interests of teenagers. These initiatives play a vital role in fostering a continuous learning
-                        culture, empowering individuals to adapt to evolving challenges and excel in their respective
+                        culture, empowering individuals to adapt to evolving challenges in their respective
                         fields.</p>
                     <button class="btn bg-[#FF4240] text-white w-44">Register Now!</button>
                 </div>
@@ -166,7 +169,7 @@
                             knowledge,
                             and proficiency of individuals. These initiatives play a vital role in fostering a
                             continuous
-                            learning culture to adapt evolving challenges in their respective fields.</p>
+                            learning culture to adapt in their respective fields.</p>
                         <button class="btn bg-[#FF4240] text-white w-44">Register Now!</button>
                     </div>
                 </div>
@@ -178,7 +181,9 @@
             <hr class="my-12 border-2 border-dashed border-[#13131833]">
             <div class="text-center gap-6 flex flex-col">
                 <h1 class="font-extrabold text-4xl">Our New Products</h1>
-                <p class="text-[#0d0d128a] font-medium text-base">Discover the cutting-edge features and exceptional quality of our newest products. Feel free to customize this template based on the nature of your products and the specific details you'd like to highlight.</p>
+                <p class="text-[#0d0d128a] font-medium text-base">Discover the cutting-edge features and exceptional
+                    quality of our newest products. Feel free to customize this template based on the nature of your
+                    products and the specific details you'd like to highlight.</p>
             </div>
             <hr class="my-12 border-2 border-dashed border-[#13131833]">
             <!-- Section 4 Grid -->
@@ -197,7 +202,8 @@
                             <h6 class="text-base font-medium text-[#13131880]">200</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Football</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
+                            displayed during matches and events.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -219,7 +225,8 @@
                             <h6 class="text-base font-medium text-[#13131880]">220</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Hockey</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
+                            displayed during matches and events.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $12.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -241,7 +248,8 @@
                             <h6 class="text-base font-medium text-[#13131880]">300</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">Cap For Hockeys</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
+                            displayed during matches and events.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $25.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -263,7 +271,8 @@
                             <h6 class="text-base font-medium text-[#13131880]">150</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">World Hockey Leagues</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
+                            displayed during matches and events.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $120.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -285,7 +294,8 @@
                             <h6 class="text-base font-medium text-[#13131880]">180</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">World Cup Flags Football</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
+                            displayed during matches and events.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $29.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -307,7 +317,8 @@
                             <h6 class="text-base font-medium text-[#13131880]">350</h6>
                         </div>
                         <h3 class="text-[#131318] text-xl font-extrabold">Hockey World Cup</h3>
-                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag displayed during matches and events.</p>
+                        <p class="text-[#13131899] text-base font-medium">Participating country has its national flag
+                            displayed during matches and events.</p>
                         <div class="flex gap-3">
                             <h5 class="text-[#FF4240] text-base font-extrabold">Price - $45.00</h5>
                             <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
@@ -318,49 +329,101 @@
             </div>
         </section>
         <!-- Section 4 End -->
+        <!-- Section 5 Start -->
+        <Section>
+            <hr class="my-12 border-2 border-dashed border-[#13131833]">
+            <div class="text-center gap-6 flex flex-col">
+                <h1 class="font-extrabold text-4xl">Get In Touch</h1>
+                <p class="text-[#0d0d128a] font-medium text-base">We'd love to hear from you! Whether you have
+                    questions, feedback, or just want to say hello. We're here and ready to assist.</p>
+            </div>
+            <hr class="my-12 border-2 border-dashed border-[#13131833]">
+            <div class="flex gap-8 flex-col lg:flex-row">
+                <div class="flex flex-col gap-6 border-2 border-dashed border-[#1313181A] items-center p-10">
+                    <div class="bg-[#BCED6D1A] p-10 rounded-2xl w-full">
+                        <img src="images/Group-11.png" alt="">
+                        <p class="text-[#13131866] text-base font-medium">Phone Number:</p>
+                        <h3 class="text-[#131318] text-base font-extrabold">(+62) 123-321-543</h3>
+                    </div>
+                    <div class="bg-[#FDDD5F1A] p-10 rounded-2xl w-full">
+                        <img src="images/Group-12.png" alt="">
+                        <p class="text-[#13131866] text-base font-medium">Email:</p>
+                        <h3 class="text-[#131318] text-base font-extrabold">hockeys@support.com</h3>
+                    </div>
+                    <div class="bg-[#629CF31A] p-10 rounded-2xl w-full">
+                        <img src="images/Group-13.png" alt="">
+                        <p class="text-[#13131866] text-base font-medium">Location:</p>
+                        <h3 class="text-[#131318] text-base font-extrabold">152/1 Mohakhali Wireless</h3>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 flex-1">
+                    <div class="flex flex-col gap-1">
+                        <label for="name" class="text-xl font-bold">Your Name</label> <br>
+                        <input class="bg-[#13131808] p-6 rounded-2xl" type="text" placeholder="Enter your full name">
+                    </div>
+                    <div class="flex flex-col gap-1">
+                        <label for="name" class="text-xl font-bold">Your Email</label> 
+                        <br>
+                        <input class="bg-[#13131808] p-6 rounded-2xl" type="email" placeholder="Enter your email">
+                    </div>
+                    <div class="flex flex-col gap-1">
+                        <label for="subject" class="text-xl font-bold">Subject</label> <br>
+                        <input class="bg-[#13131808] p-6 rounded-2xl" type="text" placeholder="Enter your subject">
+                    </div>
+                    <div class="flex flex-col gap-1">
+                        <label for="number" class="text-xl font-bold">Phone Number</label> <br>
+                        <input class="bg-[#13131808] p-6 rounded-2xl" type="number" placeholder="Enter your phone number">
+                    </div>
+                    <div class="lg:col-span-2 flex flex-col gap-1">
+                        <label for="message" class="text-xl font-bold">Message</label> <br>
+                        <input class="bg-[#13131808] p-6 rounded-2xl h-40" type="text" placeholder="Write your message">
+                    </div>
+                        <button class="btn bg-[#FF4240] text-white lg:col-span-2">Send Message</button>
+                </div>
+            </div>
+        </Section>
+        <!-- Section 5 End -->
     </main>
     <!-- Footer Section -->
-    <footer>
-        <footer class="footer p-10 bg-[#131318] text-neutral-content grid grid-cols-1">
-            <div class="flex flex-col gap-4 flex-1">
-                <h2 class="text-2xl font-extrabold">Get In Touch</h2>
-                <p class="text-base font-medium">Have questions or need assistance? Feel free to get in touch with us.
-                </p>
-                <div class="flex gap-2">
-                    <i class="fa-regular fa-envelope text-[#FF4240]"></i>
-                    <h6>hockeys@support.com</h6>
-                </div>
-                <div class="flex gap-2">
-                    <i class="fa-solid fa-phone text-[#FF4240]"></i>
-                    <h6>(+62) 123-321-543</h6>
-                </div>
+    <footer class="footer p-10 bg-[#131318] text-neutral-content grid grid-cols-1">
+        <div class="flex flex-col gap-4 flex-1">
+            <h2 class="text-2xl font-extrabold">Get In Touch</h2>
+            <p class="text-base font-medium">Have questions or need assistance? Feel free to get in touch with us.
+            </p>
+            <div class="flex gap-2">
+                <i class="fa-regular fa-envelope text-[#FF4240]"></i>
+                <h6>hockeys@support.com</h6>
             </div>
-            <div class="grid grid-cols-2 lg:grid-cols-3 gap-y-12">
-                <nav class="grid grid-cols-1 gap-4">
-                    <header class="footer-title">Company</header>
-                    <a class="link link-hover">About us</a>
-                    <a class="link link-hover">Leadership</a>
-                    <a class="link link-hover">Careers</a>
-                    <a class="link link-hover">News & Article</a>
-                    <a class="link link-hover">Legal Notice</a>
-                </nav>
-                <nav class="grid grid-cols-1 gap-4">
-                    <header class="footer-title">Support</header>
-                    <a class="link link-hover">Help Center</a>
-                    <a class="link link-hover">FAQ</a>
-                    <a class="link link-hover">Ticket Support</a>
-                    <a class="link link-hover">Contact Us</a>
-                </nav>
-                <nav class="grid grid-cols-1 gap-4 mx-9">
-                    <header class="footer-title">Services</header>
-                    <a class="link link-hover">Academy</a>
-                    <a class="link link-hover">Group Lesson</a>
-                    <a class="link link-hover">Private Lesson</a>
-                    <a class="link link-hover">Hockeys for kids</a>
-                    <a class="link link-hover">Hockeys for adults</a>
-                </nav>
+            <div class="flex gap-2">
+                <i class="fa-solid fa-phone text-[#FF4240]"></i>
+                <h6>(+62) 123-321-543</h6>
             </div>
-        </footer>
+        </div>
+        <div class="grid grid-cols-2 lg:grid-cols-3 gap-y-12">
+            <nav class="grid grid-cols-1 gap-4">
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Leadership</a>
+                <a class="link link-hover">Careers</a>
+                <a class="link link-hover">News & Article</a>
+                <a class="link link-hover">Legal Notice</a>
+            </nav>
+            <nav class="grid grid-cols-1 gap-4">
+                <header class="footer-title">Support</header>
+                <a class="link link-hover">Help Center</a>
+                <a class="link link-hover">FAQ</a>
+                <a class="link link-hover">Ticket Support</a>
+                <a class="link link-hover">Contact Us</a>
+            </nav>
+            <nav class="grid grid-cols-1 gap-4 mx-9">
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Academy</a>
+                <a class="link link-hover">Group Lesson</a>
+                <a class="link link-hover">Private Lesson</a>
+                <a class="link link-hover">Hockeys for kids</a>
+                <a class="link link-hover">Hockeys for adults</a>
+            </nav>
+        </div>
     </footer>
 </body>
 
