Social media section done

--- a/index.html
+++ b/index.html
@@ -381,6 +381,17 @@
                         <button class="btn bg-[#FF4240] text-white lg:col-span-2">Send Message</button>
                 </div>
             </div>
+            <div class="my-10 bg-[#10101313] flex flex-col gap-6 justify-center items-center p-8">
+                <div>
+                    <h3 class="text-[#131318] text-2xl font-extrabold">Social Media</h3>
+                </div>
+                <div class="flex gap-8">
+                    <a href="https://twitter.com" class="fa fa-twitter"></a>
+                    <a href="https://facebook.com" class="fa fa-facebook"></a>
+                    <a href="https://instagram.com" class="fa fa-instagram"></a>
+                    <a href="https://github.com" class="fa fa-github"></a>
+                </div>
+            </div>
         </Section>
         <!-- Section 5 End -->
     </main>
