--- a/index.html
+++ b/index.html
@@ -38,10 +38,45 @@
     <header class="container mx-auto my-20 w-5/6">
         <!-- Navigation bar -->
         <nav>
-
+            <div class="navbar bg-base-100 flex justify-evenly">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                    </div>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                      <li><a class="text-[#FF4240] text-base font-bold">Home</a></li>
+                      <li>
+                        <a class="text-base font-normal text-[#424247]">About</a>
+                      </li>
+                      <li><a class="text-base font-normal text-[#424247]">Pages</a></li>
+                      <li><a class="text-base font-normal text-[#424247]">Blog</a></li>
+                      <li><a class="text-base font-normal text-[#424247]">Contact</a></li>
+                    </ul>
+                  </div>
+                  <a class="btn btn-ghost text-4xl">Hockey<span class="text-[#FF4240]">'</span>s</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1">
+                    <li><a class="text-[#FF4240] text-base font-bold">Home</a></li>
+                      <li>
+                        <a class="text-base font-normal text-[#424247]">About</a>
+                      </li>
+                      <li><a class="text-base font-normal text-[#424247]">Pages</a></li>
+                      <li><a class="text-base font-normal text-[#424247]">Blog</a></li>
+                      <li><a class="text-base font-normal text-[#424247]">Contact</a></li>
+                  </ul>
+                </div>
+                <div class="flex gap-6">
+                    <input type="text"><i class="fa-solid fa-magnifying-glass text-[#89898B] lg:block hidden"></i>
+                    <div class="navbar-end">
+                    <a class="btn bg-[#FF4240] text-white font-bold">Get Ticket</a>
+                    </div>
+                </div>
+              </div>
         </nav>
         <!-- Carousel -->
-        <div class="carousel w-full">
+        <div class="carousel w-full my-6">
             <!-- Slider 1 -->
             <div id="slide1" class="carousel-item relative w-full">
                 <img src="images/1.png" class="w-full" />
